# kinect

./: .gitignore  .qglviewer.xml  README.md  kinect.rosinstall
depth_view/: CMakeLists.txt  manifest.xml
depth_view/src/: depth_view.cpp
homebrew/: cvblob.rb  libfreenect.rb  libusb-freenect.rb  libusb.rb  pcl.rb
kinect_calibration/: manifest.xml
kinect_camera/: CMakeLists.txt  manifest.xml
kinect_camera/include/kinect_camera/: kinect.h
kinect_camera/src/: kinect_driver.cpp
pcl/: mainpage.dox  manifest.xml
pcl/src/: cloud_maker.hpp  main_pcl.cpp
pcl_tools/: CMakeLists.txt  manifest.xml
pcl_tools/include/pcl_tools/: cloud_maker.hpp  colorizer.hpp  viewer_3d.h
pcl_tools/src/: viewer_3d.cpp
pcl_viewer/: CMakeLists.txt  manifest.xml
pcl_viewer/src/: main_pcl.cpp
qt_view/: .qglviewer.xml  CMakeLists.txt  manifest.xml
qt_view/launch/: ball_pcl.launch
qt_view/src/ball_cloud/: main.cpp
qt_view/src/cloud_viewer/: main.cpp
qt_view/src/pcl_viewer/: pcl_viewer.cpp
viewer/: CMakeLists.txt  manifest.xml
viewer/src/depth_viewer/: depth_viewer.cpp
viewer/src/pcl_viewer/: pcl_viewer.cpp
